--- a/progfun/funcional_teoria/referencias.html
+++ b/progfun/funcional_teoria/referencias.html
@@ -96,7 +96,28 @@
                         ¿Qué es Cardano?
                     </a>
                 </li>
-                
+                <li>
+                        Learning Functional Programming. Managing Code Complexity by Thinking Functionally.
+                        Widman J. 
+                        Agosto de 2022. O’Reilly Media Inc.
+                </li>
+                <li>
+                        Simplicity taming complex software with functional thinking. 
+                        Normand E.
+                        2021. Manning Publications Co. United States of America.
+                </li>
+                <li>
+                    <a href="https://dl.acm.org/doi/abs/10.1145/72551.72554">
+                        Conception, evolution and application of functional programming languages.  
+                        Hudak P.
+                        Septiembre 1 de 1989</a>
+                </li>
+                <li>
+                    <a href="https://ferestrepoca.github.io/paradigmas-de-programacion/progfun/tutoriales/Idris/index.html">
+                        Idris tutorial.  
+                        Diana Valentina Monroy Molina, Nicolas Felipe Pardo Machett's, Jose Luis Rativa Medina, Daniela Tocua Perilla
+                        Mayo 2023. Universidad Nacional de Colombia</a>
+                </li>
             </ul>
         </div>
     </div>
