Anexo del concepto de Teoria de Categorias y su influencia en el desarrollo de la programacion funcional

--- a/progfun/funcional_teoria/index.html
+++ b/progfun/funcional_teoria/index.html
@@ -472,6 +472,60 @@
 
             <hr>
 
+            <section id="cattheory">
+                <h2 id="cattheory1" class="text-center">Teoría de Categorías</h2>   
+                
+
+                <div class="row">
+                    <div class="col-md-4">
+                        <img class="block img-responsive" src="images\MacLaneAndEilenberg.png" alt="Photo" id="logo">
+                    </div>
+
+
+                    <div class="col-md-8 text-justify">
+                        <p>
+                            La teoría de categorías es una rama de las matemáticas que cambió la forma en que vemos y entendemos las estructuras matemáticas.
+                            Fue creada por los matemáticos Samuel Eilenberg y Saunders Mac Lane en la década de los 40, y desde entonces ha tenido un gran
+                            impacto en diversos campos como la física teórica y la informática. A grandes rasgos, esta teoría intenta axiomatizar muchas de
+                            las estructuras matemáticas generalizándolas en una sola, centrándose en las relaciones entre ellas más que en su propio
+                            significado. Haciendo una analogía, se parece a cuando estamos armando un rompecabezas y en vez de concentrarnos en 
+                            las piezas específicamente, observamos cómo todas las piezas encajan y se conectan. 
+                        </p>
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row">
+                    <div class="col-md-8 text-justify">
+                        <p>
+                            Las categorías en esta teoría pueden verse como mundos matemáticos y los functores hacen las veces de traductores
+                            que nos ayudan a entender cómo los elementos de una categoría se relacionan con los elementos de otra, en otras palabras,
+                            son puentes que conectan distintas áreas de la matemática. Otro concepto relevante es el de morfismo, este puede interpretarse
+                            de una manera general como una función que conecta cualquier par de elementos de una categoría coherentemente. Adicionalmente,
+                            esta teoría ha influido en la programación, ayudando al diseño de nuevos lenguajes programación y a la comprensión de la
+                            semántica de los programas.
+                        </p>
+
+                        <p>
+                            Siguiendo este orden de ideas, la teoría de categorías ha tenido un impacto significativo en la programación funcional
+                            ya que esta ofrece un marco sólido para enteder y desarrollar las funciones, las cuales son el pilar fundamental del paradigma,
+                            de manera elegante y eficiente. Por ejemplo, la teoría de categorías brinda el formalismo matemático adecuado para enunciar
+                            conceptos como el de functor o mónada, los cuales se pueden asociar a las funciones que toman otras funciones como argumentos
+                            y retornan nuevas funciones y al método usado por excelencia para manejar efectos secundarios respectivamente.
+                            Además, hace que el paradigma se acoja a los estándares de inmutabilidad, funciones puras y 
+                            la composición de funciones de distinto orden. 
+                        </p>
+                    </div>
+
+
+                    <div class="col-md-4">
+                        <img class="block img-responsive" src="images\TeoriaCategorias.jpg" alt="Photo" id="logo">
+                    </div>
+                </div>
+            </section>
+            <hr>
+
 
             <section id="advantage_disadvantage">
                 <div class="row text-justify">
