--- a/reactive/tutoriales/Svelte/index.html
+++ b/reactive/tutoriales/Svelte/index.html
@@ -128,6 +128,13 @@
 										<h3>No olvidar</h3>
 										<p>Que Svelte más que un lenguaje, es un sistema de traducción de lenguaje Svelte <em>(JavaScript + HTML + CSS) a JavaScript</em></p>
 									</li>
+									<li>
+										<span class="icon major style6 fa-file-code"></i></span>
+										<h3>Versatilidad</h3>
+										<p>La característica más solicitada durante un tiempo,Svelte admite oficialmente TypeScript.
+
+											esto proporcionará una experiencia de desarrollo mejorada, que se integra de manera óptima en bases de código más extensas de Svelte, ya sea que esté utilizando TypeScript o JavaScript.</p>
+									</li>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
