--- a/progfun/funcional_teoria/index.html
+++ b/progfun/funcional_teoria/index.html
@@ -265,9 +265,9 @@
                             diferente al cálculo lambda: el problema de la parada. Cabe aclarar que los dos modelos
                             computacionales son equivalentes ya que ambos pueden dar solución a los mismos tipos de
                             problemas. Cabe destacar que la solución de Turing se basa en un modelo computacional 
-                            basado en estados, esto dada su definición formal que usa un estado "interno" para representar 
+                            basado en estados, esto dada su definición formal que usa un "estado interno" para representar 
                             el estado de una ejecución. Por otro lado, Church dio una solución desde el punto de vista de 
-                            como se computan las funciones, donde no tiene sentido un estado interno ni nada que sea puramente
+                            como se computan las funciones, donde no tiene sentido un estado interno ni nada que no sea puramente
                             una función.
                         </p>
                     </div>
