Base rust tutorial page 2023-2 with some examples

--- a/index.html
+++ b/index.html
@@ -211,6 +211,12 @@
               <h6>Elixir</h6>
             </div>
           </a>
+          <a href="./progconcurrente/tutoriales/Rust_2021_01/index.html">
+            <div class="language">
+              <img class="download_img" src="./images/languages_icons/rust.png" alt="Descargas">
+              <h6>Rust 2023-02</h6>
+            </div>
+          </a>
         </div>
       </div>
       <div class="paradigm">
