Adding noteboox and slides on index

--- a/progconcurrente/tutoriales/Rust_2023_02/index.html
+++ b/progconcurrente/tutoriales/Rust_2023_02/index.html
@@ -44,13 +44,10 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo02">
                         <ul class="navbar-nav mx-center">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">Presentación</a>
+                                <a class="nav-link" aria-current="page" href="Presentacion.pdf">Presentación</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Notebook</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link">Disabled</a>
+                                <a class="nav-link" href="http://nbviewer.jupyter.org/url/ferestrepoca.github.io/paradigmas-de-programacion/progconcurrente/tutoriales/Rust_2023_02/RustTutorial.ipynb">Notebook</a>
                             </li>
                         </ul>
                     </div>
@@ -570,6 +567,7 @@
             <a class="btn btn-outline-light col-md-5 col-12 mx-md-5 my-md-2" href="https://www.rust-lang.org/" target="_blank">Documentacion oficial</a>
             <a class="btn btn-outline-light col-md-5 col-12 mx-md-5 my-md-2" href="https://play.rust-lang.org/?version=stable&mode=debug&edition=2021" target="_blank">Playground</a>
             <a class="btn btn-outline-light col-md-5 col-12 mx-md-5 my-md-2" href="https://github.com/ctjhoa/rust-learning" target="_blank">Rust Learning repo</a>
+            <a class="btn btn-outline-light col-md-5 col-12 mx-md-5 my-md-2" href="https://github.com/rust-lang/rustlings" target="_blank">Learn with Rustlings</a>
         </div>
     </section>
 
