--- a/progconcurrente/concurrente_teoria/index.html
+++ b/progconcurrente/concurrente_teoria/index.html
@@ -127,8 +127,7 @@
             <p>
               Es fascinante observar la evolución de la programación concurrente a lo largo del tiempo y cómo sus
               fundamentos se pueden rastrear hasta problemas prácticos en sectores como ferrocarriles y telegrafía.
-              Además de los hitos mencionados, hay algunos aspectos y desarrollos adicionales que podrías considerar
-              agregar a tu descripción:
+              Además de los hitos mencionados, hay algunos aspectos y desarrollos adicionales a considerar:
             </p>
         
             <ol>
