adding cards for last rust pages

--- a/progconcurrente/tutoriales/Rust_2023_02/index.html
+++ b/progconcurrente/tutoriales/Rust_2023_02/index.html
@@ -594,16 +594,20 @@
       Recursos oficiales o creados por la comunidad para aprender Rust.
     </p>
 
-    <div class="row">
-      <a class="btn btn-outline-light col-md-5 col-12 mx-md-5 my-md-2" href="https://www.rust-lang.org/"
-        target="_blank">Documentacion oficial</a>
-      <a class="btn btn-outline-light col-md-5 col-12 mx-md-5 my-md-2"
-        href="https://play.rust-lang.org/?version=stable&mode=debug&edition=2021" target="_blank">Playground</a>
-      <a class="btn btn-outline-light col-md-5 col-12 mx-md-5 my-md-2" href="https://github.com/ctjhoa/rust-learning"
-        target="_blank">Rust Learning repo</a>
-      <a class="btn btn-outline-light col-md-5 col-12 mx-md-5 my-md-2" href="https://github.com/rust-lang/rustlings"
-        target="_blank">Learn with Rustlings</a>
+    <!-- <div class="album py-5 bg-light"> -->
+    <div class="container-fluid">
+      <div class="row">
+        <a class="btn btn-outline-light col-md-5 col-12 mx-md-4 my-md-2" href="https://www.rust-lang.org/"
+          target="_blank">Documentacion oficial</a>
+        <a class="btn btn-outline-light col-md-5 col-12 mx-md-4 my-md-2"
+          href="https://play.rust-lang.org/?version=stable&mode=debug&edition=2021" target="_blank">Playground</a>
+        <a class="btn btn-outline-light col-md-5 col-12 mx-md-4 my-md-2" href="https://github.com/ctjhoa/rust-learning"
+          target="_blank">Rust Learning repo</a>
+        <a class="btn btn-outline-light col-md-5 col-12 mx-md-4 my-md-2" href="https://github.com/rust-lang/rustlings"
+          target="_blank">Learn with Rustlings</a>
+      </div>
     </div>
+    <!-- </div> -->
   </section>
 
 
@@ -613,6 +617,81 @@
     </h2>
 
     <div class="row" id="companies-uses-rust"></div>
+  </section>
+
+  <section id="historial">
+    <div class="album py-5 bg-light">
+      <h2>
+        Historial de páginas anteriores
+      </h2>
+
+      <div class="container">
+        <div class="row">
+
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img src="images/rust.png" class="bd-placeholder-img card-img-top" alt="rust-logo">
+              <div class="card-body">
+                <p class="card-text">
+                  En esta pagina podras encontrar recursos como
+                  tutoriales, ejemplos, documentacion y un taller.
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="../Rust/index.html" class="btn btn-sm btn-outline-secondary" role="button">
+                      View
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img src="images/rust2019-02.png" class="bd-placeholder-img card-img-top" alt="rust-logo">
+              <div class="card-body">
+                <p class="card-text">
+                  Esta es una presentacion iteractiva en html
+                  de Rust, donde se explica el lenguaje de programacion
+                  se tiene notebooks de Jupyter para practicar y tambien un taller.
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="../Rust_201903/index.html" class="btn btn-sm btn-outline-secondary" role="button">
+                      View
+                    </a>
+                  </div>
+                  <small class="text-muted">2019-02</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img src="images/rust2021-1.png" class="bd-placeholder-img card-img-top" alt="rust-logo">
+              <div class="card-body">
+                <p class="card-text">
+                  En esta pagina podras encontrar una
+                  presentacion muy interesante asi como
+                  tambien un notedbook de Jupyter muy completo.
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="../Rust_2021_01/index.html" class="btn btn-sm btn-outline-secondary" role="button">
+                      View
+                    </a>
+                  </div>
+                  <small class="text-muted">2021-01</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
   </section>
 
   <script src="js/main.js"></script>
