nombres, presentacion, explicacion de calls vs execution, ejemplo mas claro de calls vs execution

--- a/poa/tutoriales/aspectJ/index.html
+++ b/poa/tutoriales/aspectJ/index.html
@@ -961,6 +961,20 @@ https://templatemo.com/tm-529-ramayana
                   <button class="accordion"><strong>Calls vs Executions</strong></button>
                   <div class="panel">
                     <h4 id="callsvsexecution">Calls vs Execution</h4>
+                    <p>
+                      La diferencia entre calls y execution es que calls se refiere al acto de llamar a una función, mientras que execution se refiere al acto de ejecutar el código de una función.
+                    </p>
+                    <p>En otras palabras, calls es el evento de pasar el control a una función, mientras que execution es el proceso de ejecutar las instrucciones de una función.</p>
+                    <p>
+                      Por ejemplo, la siguiente línea de código:
+                    </p>
+                    <p style="font-style: italic; color: black;">int x = add(1, 2);</p>
+                    <p>contiene una llamada a la función add(). Cuando se ejecuta esta línea de código, el control se pasa a la función add(). La función add() entonces ejecuta sus instrucciones, que en este caso son:</p>
+                    <p style="font-style: italic; color: black;">int sum = x + y;</p>
+                    <p style="font-style: italic; color: black;">return sum;</p>
+                    <p>
+                      El proceso de ejecutar las instrucciones de la función add() se conoce como ejecución.
+                    </p>
                     <script src="https://gist.github.com/ejariasm/7f9c0189640343ce8911260535df87b6.js"></script>
                   </div>
                   <button class="accordion"><strong>Context Passing</strong></button>
@@ -1143,6 +1157,13 @@ https://templatemo.com/tm-529-ramayana
                     <li>Manuel David Maya Rosero</li>
                     <li>Nicol Estefania Guerrero Gutierrez</li>
                   </ul>
+                  <h4>2023-2</h4>
+                  <ul>
+                    <li>Juan Pablo Garzon Parra</li>
+                    <li>Brayan Sebastián Yepes Garcia</li>
+                    <li>Diego Sebastián Rubiano Ballen</li>
+                    <li>Joe Zafir Mendez Leon</li>
+                  </ul>
                   <ul>
                 </div>
               </div>
@@ -1257,6 +1278,13 @@ https://templatemo.com/tm-529-ramayana
             <h2>Presentaciones Aspectj</h2>
           </div>
           <div class="owl-carousel owl-theme">
+            <a href="./assets/presentaciones/presentacion2023-2.pdf">
+              <div>
+                <iframe src="./assets/presentaciones/presentacion2023-2.pdf" seamless webkitallowfullscreen
+                  mozallowfullscreen allowfullscreen></iframe>
+                <p>Presentacion Tutorial AspectJ 2023-2.</p>
+              </div>
+            </a>
              <div>
                   <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
                                      padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
